--- a/src/scss/puzzle.scss
+++ b/src/scss/puzzle.scss
@@ -264,6 +264,7 @@ $cell-size: 33px;
 
   .clue-holder {
     border-bottom: none !important;
+    padding-bottom: 0 !important;
 
     ol {
       padding: 0 !important;
@@ -287,6 +288,6 @@ $cell-size: 33px;
     border: 2px solid $active !important;
     border-radius: 10px !important;
     color: $blank !important;
-    margin-bottom: 0.5em;
+    margin-bottom: 0.75em;
   }
 }
