updated many styles

--- a/src/scss/puzzle.scss
+++ b/src/scss/puzzle.scss
@@ -156,16 +156,17 @@ $cell-size-small: 29px;
 .clue-holder {
   font-size: 11px !important;
   border-bottom: 1px solid $main !important;
-  padding-bottom: 3px !important;
 
   h3 {
     border-bottom: 1px solid $main !important;
     text-align: center !important;
-    margin-top: 0 !important;
+    margin: 0 !important;
+    padding: 2px !important;
+    font-size: 22px !important;
   }
 
   ol {
-    max-height: 20em !important;
+    max-height: 275px !important;
     overflow-y: auto !important;
     margin: 0;
 
@@ -283,8 +284,8 @@ $cell-size-small: 29px;
     background: unset !important;
     padding-left: 0 !important;
     width: 100% !important;
-    border: 2px solid $active !important;
-    border-radius: 10px !important;
+    border-left: 3px solid $main !important;
+    border-bottom: 1px solid $main !important;
     color: $blank !important;
     margin-bottom: 0.75em;
   }
